--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,19 @@
           //console.log(response)
         })
         .then(data =>{
-            data.articles.forEach(article => {
+            let article=data.articles;
+            for(i=0;i<4;i++){
               const content 
-                =`<img src="${article.urlToImage}" alt="Article Image" style="width:200px;height:200px;margin:20px;"><br>`;
-                document.querySelector(`.bitcoin`).insertAdjacentHTML('beforeend',content)
-            });
+                = `<div class="card m-4" style="width: 18rem;">
+                    <img class=" card-img-top" src="${article[i].urlToImage}" alt="Article Image">
+                    <div class="card-body">
+                    <h5 class="card-title">${article[i].title}</h5>
+                    <p class="card-text">${article[i].description}</p>
+                    <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                    </div>`;
+                document.getElementById("bitcoin").innerHTML+=content;
+            }
         })
         fetch('https://newsapi.org/v2/everything?q=apple&from=2024-07-09&to=2024-07-09&sortBy=popularity&apiKey=25b6f280bb734c7caa5b26785fc98335')
         .then(response =>{
@@ -25,23 +33,41 @@
           //console.log(response)
         })
         .then(data =>{
-            data.articles.forEach(article => {
+            let article=data.articles;
+            for(i=0;i<6;i++){
+                if(article[i].title !== "[Removed]" && article[i].description !== null)
+                {
               const content 
-                =`<img src="${article.urlToImage}" alt="Article Image" style="width:200px;height:200px;margin:20px;"><br>`;
-                document.querySelector(`.apple`).insertAdjacentHTML('beforeend',content)
-            });
+                = `<div class="card m-4" style="width: 18rem;">
+                    <img class="card-img-top"  src="${article[i].urlToImage}" alt="Article Image" >
+                    <div class="card-body">
+                    <h5 class="card-title">${article[i].title}</h5>
+                    <p class="card-text">${article[i].description}</p>
+                    <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                    </div>`;
+                    document.getElementById("apple").innerHTML+=content;
+            }
+        }
         })
         fetch('https://newsapi.org/v2/everything?q=tesla&from=2024-06-10&sortBy=publishedAt&apiKey=25b6f280bb734c7caa5b26785fc98335')
         .then(response =>{
           return response.json();
-          //console.log(response)
-        })
+     })
         .then(data =>{
-            data.articles.forEach(article => {
+            let article=data.articles;
+            for(i=0;i<4;i++){
               const content 
-                =`<img src="${article.urlToImage}" alt="Article Image" style="width:200px;height:200px;margin:20px">`;
-                document.querySelector(`.tesla`).insertAdjacentHTML('beforeend',content)
-            });
+                = `<div class="card m-4" style="width: 18rem;">
+                    <img class="card-img-top"  src="${article[i].urlToImage}" alt="Article Image" >
+                    <div class="card-body">
+                    <h5 class="card-title">${article[i].title}</h5>
+                    <p class="card-text">${article[i].description}</p>
+                    <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                    </div>`;
+                    document.getElementById("tesla").innerHTML+=content;
+            }
         })
     </script>
     <style>
@@ -52,22 +78,22 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light bg-dark container-fluid">
+        <nav class="navbar navbar-expand-sm navbar-light bg-danger container-fluid">
             <div class="container">
-                <a class="nav-link navbar-text" href="index.html">
+                <a class="nav-link navbar-text text-dark" href="index.html">
                     Home
                 </a>
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="apple.html">Apple</a>
+                    <li class="nav-item me-3">
+                        <a class="nav-link shadow-sm" href="apple.html">Apple</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item me-3">
                         <a class="nav-link" href="tesla.html">Tesla</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item me-3">
                         <a class="nav-link" href="technNews.html">Tech</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item me-3">
                         <a class="nav-link" href="buisnessHeadlines.html">Buisness</a>
                     </li>
                     <li class="nav-item">
@@ -77,14 +103,13 @@
             </div>
         </nav>
     </header>
-    <div class="container-fluide mt-5">
-        <div class="row ">
-            <div class="col-lg-12">
-                <div class="bitcoin">
-
-                </div>
+    <div class="container-fluid mt-5">
+        <h1>Bitcoin</h1>
+            <div  id="bitcoin" class="row">
             </div>
-        </div>
-    </div>
+        <h1>Apple</h1>
+        <div id="apple" class="row" ></div>
+        <h1>Tesla</h1>
+        <div id="tesla" class="row"></div>
 </body>
 </html>
